[package]
name = "opt_args"
version = "2.0.0"
license = "Apache-2.0"
authors = ["Princic-1837592 <andreapri.99@gmail.com>"]
description = "Create macros for functions and structs with default values"
repository = "https://github.com/Princic-1837592/opt_args"
keywords = ["macro", "function", "struct", "optional", "arguments"]
edition = "2021"

[lib]
proc-macro = true
#doctest = false

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "2.0.52", features = ["full"] }
itertools = "0.12.1"
derive-syn-parse = "0.1.5"
deluxe = "0.5.0"
